<resources>
    <string name="app_name">Pomodoro</string>
    <string name="default_time_display">00:00:00</string>
    <string name="startButtonText">Start</string>
    <string name="sett30m">30 min</string>
    <string name="sett60m">60 min</string>
    <string name="sett90m">120 min</string>
    <string name="sett120m">90 min</string>
    <string name="tid">Tid</string>
    <string name="pause">Pause</string>
    <string name="antall_repit">Antall Repit</string>
</resources>